--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+// primeng styles
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+// primeicons styles
+@import "primeicons/primeicons.css";
