adding input fields

--- a/src/app/shared/components/form-generic/form-generic.component.html
+++ b/src/app/shared/components/form-generic/form-generic.component.html
@@ -1,1 +1,3 @@
-<p>form-generic works!</p>
+<app-input-text></app-input-text>
+<app-input-text-area></app-input-text-area>
+<app-input-number></app-input-number>
