added inputs till calendar

--- a/src/app/shared/components/form-generic/form-generic.component.html
+++ b/src/app/shared/components/form-generic/form-generic.component.html
@@ -1,3 +1,9 @@
-<app-input-text></app-input-text>
-<app-input-text-area></app-input-text-area>
-<app-input-number></app-input-number>
+<form [formGroup]="form">
+  <app-input-text></app-input-text>
+  <app-input-text-area></app-input-text-area>
+  <app-input-number></app-input-number>
+  <app-input-switch></app-input-switch>
+  <app-input-autocomplete></app-input-autocomplete>
+  <app-input-date></app-input-date>
+  <app-input-date-time></app-input-date-time>
+</form>
