--- a/src/app/shared/components/inputs/input-number/input-number.component.html
+++ b/src/app/shared/components/inputs/input-number/input-number.component.html
@@ -1,1 +1,2 @@
-<p-inputNumber inputId="minmax" mode="decimal" [min]="0" [max]="100" />
+<p-inputNumber inputId="minmax" mode="decimal" />
+<!-- formControlName="control" -->
