--- a/src/app/shared/components/inputs/input-text-area/input-text-area.component.html
+++ b/src/app/shared/components/inputs/input-text-area/input-text-area.component.html
@@ -1,2 +1,2 @@
-<textarea rows="5" cols="30" pInputTextarea> </textarea>
-<!-- formControlName="text" -->
+<textarea rows="1" cols="30" pInputTextarea></textarea>
+<!-- formControlName="control"-->
