--- a/src/app/shared/components/inputs/input-text/input-text.component.html
+++ b/src/app/shared/components/inputs/input-text/input-text.component.html
@@ -1,2 +1,2 @@
-<input type="text" pInputText />
-<!-- formControlName="control" -->
+<label>{{ label }}</label>
+<input type="text" pInputText [formControl]="control" />
