--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
 </ng-container>
 <ng-template #loggedIn> Logged In <router-outlet></router-outlet> </ng-template>
 <ng-template #loggedOut>
+  {{ isLoggedIn$ | async }}
   Logged Out <router-outlet></router-outlet>
 </ng-template>
