--- a/src/app/shared/components/inputs/input-password/input-password.component.html
+++ b/src/app/shared/components/inputs/input-password/input-password.component.html
@@ -1,2 +1,4 @@
-<label>{{ label }}</label>
-<p-password [feedback]="false" [formControl]="control"></p-password>
+<div class="{{ controlConfig?.componentClass }}">
+  <label>{{ controlConfig?.fieldLabel }}</label>
+  <p-password [feedback]="false" [formControl]="control"></p-password>
+</div>
