--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,5 @@
 @import "primeng/resources/primeng.css";
 // primeicons styles
 @import "primeicons/primeicons.css";
+// bootstrap style
+@import "./assets/css/bootstrap/bootstrap.css";
