--- a/src/app/shared/components/inputs/input-password/input-password.component.html
+++ b/src/app/shared/components/inputs/input-password/input-password.component.html
@@ -1,4 +1,12 @@
-<div class="{{ controlConfig?.componentClass }}">
-  <label>{{ controlConfig?.fieldLabel }}</label>
-  <p-password [feedback]="false" [formControl]="control"></p-password>
-</div>
+<label class="{{ controlConfig?.labelClass }}">{{
+  controlConfig?.fieldLabel
+}}</label>
+<span class="{{ controlConfig?.spanClass }}">
+  <!-- <i *ngIf="controlConfig?.showIcon" class="{{ controlConfig?.iconClass }}"></i> -->
+  <p-password
+    [feedback]="false"
+    [formControl]="control"
+    class="{{ controlConfig?.fieldClass }}"
+    [toggleMask]="true"
+  ></p-password>
+</span>
