--- a/src/app/shared/components/inputs/input-text/input-text.component.html
+++ b/src/app/shared/components/inputs/input-text/input-text.component.html
@@ -1,4 +1,12 @@
-<div class="{{ controlConfig?.componentClass }}">
-  <label>{{ controlConfig?.fieldLabel }}</label>
-  <input type="text" pInputText [formControl]="control" />
-</div>
+<label class="{{ controlConfig?.labelClass }}">{{
+  controlConfig?.fieldLabel
+}}</label>
+<span class="{{ controlConfig?.spanClass }}">
+  <i *ngIf="controlConfig?.showIcon" class="{{ controlConfig?.iconClass }}"></i>
+  <input
+    type="text"
+    pInputText
+    [formControl]="control"
+    class="{{ controlConfig?.fieldClass }}"
+  />
+</span>
