--- a/src/app/shared/components/table-generic/table-generic.component.html
+++ b/src/app/shared/components/table-generic/table-generic.component.html
@@ -2,7 +2,7 @@
 
 <div class="container py-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1 class="h4">Users Management</h1>
+    <h1 class="h4">{{ tableConfig.tableTitle }}</h1>
     <button pButton label="+ Add New User" class="btn btn-primary"></button>
   </div>
 
@@ -43,6 +43,8 @@
           {{
             col?.multiplePaths
               ? getMultiplePathsData(data, col.multiplePaths)
+              : col?.nestedPath
+              ? getNestedPathData(data, col.nestedPath)
               : data[col.field]
           }}
         </td>
