con content found added

--- a/src/app/shared/components/table-generic/table-generic.component.html
+++ b/src/app/shared/components/table-generic/table-generic.component.html
@@ -16,6 +16,7 @@
     [selection]="selectedUsers"
     (selectionChange)="onSelectionChange($event)"
     dataKey="email"
+    *ngIf="tableConfig.tableData?.length"
   >
     <!-- Table Headers -->
     <ng-template pTemplate="header">
@@ -111,4 +112,7 @@
       </tr>
     </ng-template> -->
   </p-table>
+  <app-no-content-found
+    *ngIf="!tableConfig.tableData?.length"
+  ></app-no-content-found>
 </div>
