--- a/src/app/ums/components/applications/applications-list/applications-list.component.html
+++ b/src/app/ums/components/applications/applications-list/applications-list.component.html
@@ -1,1 +1,4 @@
-<app-table-generic [tableConfig]="tableDate"></app-table-generic>
+<app-table-generic
+  [tableConfig]="tableDate"
+  (onAction)="onClick($event)"
+></app-table-generic>
