application dialog added

--- a/src/app/shared/components/table-generic/table-generic.component.html
+++ b/src/app/shared/components/table-generic/table-generic.component.html
@@ -5,7 +5,7 @@
       <ng-container *ngFor="let action of tableConfig.tableActions">
         <button
           pButton
-          label="+ Add New User"
+          [label]="action.actionTitle"
           class="btn btn-primary"
           (click)="onClick(action)"
         ></button>
