--- a/src/app/layout/top-bar/top-bar.component.html
+++ b/src/app/layout/top-bar/top-bar.component.html
@@ -1,1 +1,37 @@
-<p>top-bar works!</p>
+<!-- top-header.component.html -->
+<div
+  class="d-flex align-items-center justify-content-between bg-dark text-white p-2"
+>
+  <div class="d-flex align-items-center">
+    <img src="logo.png" alt="Logo" class="me-2" height="30" />
+    <h5 class="mb-0">Time Management</h5>
+  </div>
+  <nav>
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/attendance">Attendance</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/overtime">Overtime</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/shift-schedule"
+          >Shift Schedule</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/work-time">Work Time</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="d-flex align-items-center">
+    <button
+      pButton
+      pRipple
+      type="button"
+      icon="pi pi-plus"
+      class="p-button-rounded p-button-text text-white me-3"
+    ></button>
+    <i class="pi pi-user text-white fs-4"></i>
+  </div>
+</div>
