--- a/src/app/shared/components/inputs/input-switch/input-switch.component.html
+++ b/src/app/shared/components/inputs/input-switch/input-switch.component.html
@@ -1,2 +1,12 @@
-<p-inputSwitch />
-<!-- formControlName="control" -->
+<label class="{{ controlConfig?.labelClass }}">{{
+  controlConfig?.fieldLabel
+}}</label>
+<span class="{{ controlConfig?.spanClass }}">
+  <i *ngIf="controlConfig?.showIcon" class="{{ controlConfig?.iconClass }}"></i>
+  <!-- <input
+    type="text"
+    pInputText
+    class="{{ controlConfig?.fieldClass }}"
+  /> -->
+  <p-inputSwitch [formControl]="control" />
+</span>
