--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,12 @@
   </div>
 </ng-template>
 <ng-template #loggedOut>
-  <div class="vh-100 w-100 d-flex align-items-center justify-content-center">
+  <!-- <div class="vh-100 w-100 d-flex align-items-center justify-content-center">
+    <router-outlet></router-outlet>
+  </div> -->
+  <div
+    class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden"
+  >
     <router-outlet></router-outlet>
   </div>
 </ng-template>
