--- a/src/app/login/components/login/login.component.html
+++ b/src/app/login/components/login/login.component.html
@@ -1,4 +1,32 @@
-<app-form-generic
-  [formConfig]="formConfig"
-  (onAction)="onAction($event)"
-></app-form-generic>
+<div class="flex flex-column align-items-center justify-content-center">
+  <img
+    alt="Sakai logo"
+    class="mb-5 w-6rem flex-shrink-0"
+    src="assets/layout/images/logo-white.svg"
+  />
+  <div
+    style="
+      border-radius: 56px;
+      padding: 0.3rem;
+      background: linear-gradient(
+        180deg,
+        var(--primary-color) 10%,
+        rgba(33, 150, 243, 0) 30%
+      );
+    "
+  >
+    <div
+      class="w-full surface-card py-8 px-5 sm:px-8"
+      style="border-radius: 53px"
+    >
+      <div class="text-center mb-5">
+        <div class="text-900 text-3xl font-medium mb-3">Welcome!</div>
+        <span class="text-600 font-medium">Sign in to continue</span>
+      </div>
+      <app-form-generic
+        [formConfig]="formConfig"
+        (onAction)="onAction($event)"
+      ></app-form-generic>
+    </div>
+  </div>
+</div>
