--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -1,1 +1,12 @@
-<p>layout works!</p>
+<div class="layout-wrapper layout-static p-ripple-disabled layout-theme-dark">
+  <app-top-bar></app-top-bar>
+  <div class="layout-sidebar">
+    <app-menu></app-menu>
+  </div>
+  <div class="layout-main-container">
+    <div class="layout-main">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+  <div class="layout-mask"></div>
+</div>
