--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,7 @@ $gutter: 1rem; //for primeflex grid system
 @import "assets/demo/styles/flags/flags.css";
 @import "assets/demo/styles/badges.scss";
 @import "assets/demo/styles/code.scss";
+
+.form-field-container {
+  margin-bottom: 0.5rem;
+}
