generic form updated - controls validations added

--- a/src/app/shared/components/buttons/button/button.component.html
+++ b/src/app/shared/components/buttons/button/button.component.html
@@ -1,1 +1,5 @@
-<p-button [label]="buttonConfig.actionTitle" (click)="onClickFunc()"></p-button>
+<p-button
+  [label]="buttonConfig.actionTitle"
+  (click)="onClickFunc()"
+  [disabled]="disabled"
+></p-button>
