--- a/src/app/ums/components/applicationRoles/application-roles-list/application-roles-list.component.html
+++ b/src/app/ums/components/applicationRoles/application-roles-list/application-roles-list.component.html
@@ -1,1 +1,4 @@
-<p>application-roles-list works!</p>
+<app-table-generic
+  [tableConfig]="tableDate"
+  (onAction)="onClick($event)"
+></app-table-generic>
