application roles dialog updated

--- a/src/app/ums/components/applicationRoles/application-roles-dialog/application-roles-dialog.component.html
+++ b/src/app/ums/components/applicationRoles/application-roles-dialog/application-roles-dialog.component.html
@@ -1,1 +1,4 @@
-<p>application-roles-dialog works!</p>
+<app-form-generic
+  [formConfig]="formConfig"
+  (onAction)="onAction($event)"
+></app-form-generic>
