application roles add - done

--- a/src/app/shared/components/inputs/input-dropdown/input-dropdown.component.html
+++ b/src/app/shared/components/inputs/input-dropdown/input-dropdown.component.html
@@ -7,7 +7,8 @@
     [formControl]="control"
     class="{{ controlConfig?.fieldClass }}"
     [options]="controlConfig.valuesList"
-    optionLabel="title"
+    optionLabel="{{ controlConfig.dropDownLabel }}"
+    optionValue="{{ controlConfig.dropDownValue }}"
     placeholder="Select a City"
   />
 </span>
