--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <ngx-ui-loader></ngx-ui-loader> -->
+<ngx-ui-loader></ngx-ui-loader>
 <app-toast></app-toast>
 <ng-container *ngIf="isLoggedIn$ | async; then loggedIn; else loggedOut">
 </ng-container>
