business roles list updated

--- a/src/app/ums/components/businessRoles/business-roles-list/business-roles-list.component.html
+++ b/src/app/ums/components/businessRoles/business-roles-list/business-roles-list.component.html
@@ -1,1 +1,4 @@
-<p>business-roles-list works!</p>
+<app-table-generic
+  [tableConfig]="tableDate"
+  (onAction)="onClick($event)"
+></app-table-generic>
