--- a/src/app/ums/components/businessRoles/business-roles-dialog/business-roles-dialog.component.html
+++ b/src/app/ums/components/businessRoles/business-roles-dialog/business-roles-dialog.component.html
@@ -1,1 +1,5 @@
-<p>business-roles-dialog works!</p>
+<app-form-generic
+  *ngIf="renderForm"
+  [formConfig]="formConfig"
+  (onAction)="onAction($event)"
+></app-form-generic>
