functionality done for #3, styling missing

--- a/src/app/ums/components/businessRoles/business-roles-dialog/business-roles-dialog.component.html
+++ b/src/app/ums/components/businessRoles/business-roles-dialog/business-roles-dialog.component.html
@@ -11,6 +11,9 @@
 
   <div *ngFor="let unLinked of applicationRolesList[1]">
     <label for="switch1">{{ unLinked?.title }}</label>
-    <p-inputSwitch inputId="switch1"></p-inputSwitch>
+    <p-inputSwitch
+      inputId="switch1"
+      (onChange)="onChange($event, unLinked)"
+    ></p-inputSwitch>
   </div>
 </div>
