--- a/src/app/ums/components/businessRoles/business-roles-dialog/business-roles-dialog.component.html
+++ b/src/app/ums/components/businessRoles/business-roles-dialog/business-roles-dialog.component.html
@@ -3,13 +3,23 @@
   [formConfig]="formConfig"
   (onAction)="onAction($event)"
 ></app-form-generic>
-<div *ngIf="renderLinkUnlinkForm">
-  <div *ngFor="let linked of applicationRolesList[0]">
+<div *ngIf="renderLinkUnlinkForm" class="d-flex flex-column">
+  <div
+    *ngFor="let linked of applicationRolesList[0]"
+    class="d-flex justify-content-between mb-2 bg-secondary align-items-center px-2"
+  >
     <label for="switch1">{{ linked?.title }}</label>
-    <p-inputSwitch [ngModel]="true" inputId="switch1"></p-inputSwitch>
+    <p-inputSwitch
+      [ngModel]="true"
+      (onChange)="onChange($event, linked)"
+      inputId="switch1"
+    ></p-inputSwitch>
   </div>
 
-  <div *ngFor="let unLinked of applicationRolesList[1]">
+  <div
+    *ngFor="let unLinked of applicationRolesList[1]"
+    class="d-flex justify-content-between mb-2 bg-secondary align-items-center px-2"
+  >
     <label for="switch1">{{ unLinked?.title }}</label>
     <p-inputSwitch
       inputId="switch1"
