--- a/src/app/shared/components/inputs/input-dropdown/input-dropdown.component.html
+++ b/src/app/shared/components/inputs/input-dropdown/input-dropdown.component.html
@@ -9,6 +9,6 @@
     [options]="controlConfig.valuesList"
     optionLabel="{{ controlConfig.dropDownLabel }}"
     optionValue="{{ controlConfig.dropDownValue }}"
-    placeholder="Select a City"
+    placeholder="{{ controlConfig.placeHolder }}"
   />
 </span>
