organization list updated

--- a/src/app/ums/components/organization/organization-list/organization-list.component.html
+++ b/src/app/ums/components/organization/organization-list/organization-list.component.html
@@ -1,1 +1,4 @@
-<p>organization-list works!</p>
+<app-table-generic
+  [tableConfig]="tableDate"
+  (onAction)="onClick($event)"
+></app-table-generic>
