organization dialog updated

--- a/src/app/ums/components/organization/organization-dialog/organization-dialog.component.html
+++ b/src/app/ums/components/organization/organization-dialog/organization-dialog.component.html
@@ -1,1 +1,4 @@
-<p>organization-dialog works!</p>
+<app-form-generic
+  [formConfig]="formConfig"
+  (onAction)="onAction($event)"
+></app-form-generic>
