--- a/src/app/shared/components/table-generic/table-generic.component.html
+++ b/src/app/shared/components/table-generic/table-generic.component.html
@@ -40,7 +40,7 @@
         <!-- <th>Role</th>
         <th>Groups</th>
         <th>Status</th>-->
-        <th *ngIf="tableConfig?.rowActions">Actions</th>
+        <th *ngIf="tableConfig?.rowActions?.length">Actions</th>
       </tr>
     </ng-template>
 
@@ -56,7 +56,7 @@
               : data[col.field]
           }}
         </td>
-        <td *ngIf="tableConfig?.rowActions">
+        <td *ngIf="tableConfig?.rowActions?.length">
           <ng-container *ngFor="let action of tableConfig?.rowActions">
             <ng-container [ngSwitch]="action?.buttonSelector">
               <app-button
